--- a/index.html
+++ b/index.html
@@ -14,8 +14,27 @@ TODO: Change the background color for each device
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   <title>Media Query</title>
   <style>
-    body {
+
+body {
       background-color: aquamarine;
+    }
+
+    @media (max-width: 480px) and (min-width: 319px) {
+      body {
+        background-color: lightsalmon;
+      }
+    }
+
+    @media (max-width: 1200px) and (min-width: 481px) {
+      body {
+        background-color: powderblue;
+      }
+    }
+
+    @media (max-width: 1201px) and (min-width: 1600px) {
+      body {
+        background-color: limegreen;
+      }
     }
   </style>
 </head>
